--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Tasks</title>
+  <meta name="description" content="Tasks: es una página web sencilla y fácil de usar que te ayuda a organizar tus tareas pendientes. Puedes crear listas de tareas para diferentes propósitos, como el trabajo, la escuela, los proyectos personales o las tareas domésticas.">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <link rel="shortcut icon" href="https://i.ibb.co/njXkmWf/favicon-logo-Avilapro-Amarillo.png" sizes="16x16 32x32 64x64">
