--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Tasks</title>
+  <title>Tasks - Avilapro</title>
   <meta name="author" content="Avilapro">
   <meta name="keywords" content="to-do list, lista de tareas, organización, productividad, tareas, recordatorios">
   <meta name="description" content="Tasks: es una página web sencilla y fácil de usar que te ayuda a organizar tus tareas pendientes. Puedes crear listas de tareas para diferentes propósitos, como el trabajo, la escuela, los proyectos personales o las tareas domésticas.">
