--- a/index.html
+++ b/index.html
@@ -11,7 +11,15 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <link rel="shortcut icon" href="https://i.ibb.co/njXkmWf/favicon-logo-Avilapro-Amarillo.png" sizes="16x16 32x32 64x64">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
 </head>
+
+<style>
+  #lista > li{
+    display: flex;
+    justify-content: space-around;
+  }
+</style>
 
 <body onload="ejecucionInicial()">
   <!-- Formulario para agregar tarea -->
